cmake_minimum_required( VERSION 2.8 )
project( HelloSLAM )
add_executable( helloSLAM helloSLAM.cpp )
add_executable(useHello useHelloFunction.cpp)
add_executable(useHello2 useHelloFunction.cpp)
add_library( hello libHelloSLAM.cpp )
add_library( hello_shared SHARED libHelloSLAM.cpp)
target_link_libraries( useHello hello_shared )
target_link_libraries( useHello2 hello)

set(CMAKE_BUILD_TYPE Debug)
